[package]
name = "t2s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
swc_ecma_parser = "0.130.2"
swc_common = { version= "0.29.37", features=["tty-emitter"] }
swc_ecma_ast = "0.100.1"
async-openai = "0.9.4"
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.27"
